# mbnames

./: .gitignore  Makefile  README.md  names.py  names_test.py  pyproject.toml  requirements.txt  setup.py  strings.py
mbnames/: __init__.py  cmp.py  names.py
src/mbnames/: cmp.py  names.py
tests/: names_test.py
