[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbnames"
version = "v1.1.0"
dependencies = ["jellyfish>=0.8.2"]

authors = [{ name = "arcctgx", email = "arcctgx@o2.pl" }]

description = "Utility functions for working with MusicBrainz or Last.fm artist credit and title strings."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "GPLv3" }

[project.urls]
Homepage = "https://github.com/arcctgx/mbnames"

[tool.setuptools.packages.find]
where = ["src"]

[[tool.mypy.overrides]]
module = ["jellyfish"]
ignore_missing_imports = true

[tool.pylint.basic]
no-docstring-rgx = "^(_|main$)"

[tool.yapf]
based_on_style = "pep8"
column_limit = 100
